--- a/style.css
+++ b/style.css
@@ -4,4 +4,13 @@ body {
 #cabecalho {
     top: 0px;
     position: fixed;
+    background-color: #E0BBE4;
+}
+#minha_foto {
+    margin-top: 90px;
+    border: 20px #957DAD solid;
+}
+#rodape {
+    padding: 20px;
+    color: #FEC8D8;
 }
