--- a/style.css
+++ b/style.css
@@ -28,8 +28,7 @@ body {
     font-family: 'Cutive Mono', monospace;
     text-align: justify;
     line-height: 20px;
-    display: inline-block;
-    margin-right: 100px;
+    float: left;
     width: 800px;
 }
 
@@ -38,7 +37,7 @@ body {
     line-height: 20px;
     font-family: 'Cutive Mono', monospace;
     text-align: justify;
-    display: inline-block;
+    float: right;
     width: 800px;
 }
 table, th, td {
